<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="celcius_to_fahrenheit">Celcius To Fahrenheit</string>
    <string name="fahrenheit_to_celcius">Fahrenheit to Celcius</string>
    <string name="convert">Convert</string>
    <string name="_0">0</string>
    <string name="hot_message">It is Hot!</string>
    <string name="cold_message">Ooh its cold!</string>
</resources>